<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AnkiDroid</string>
    <string name="login_title">AnkiWeb Sign In</string>
    <string name="username">AnkiWeb Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Log In</string>
    <string name="skip_offline">Use Offline (.apkg only)</string>
    <string name="study">Study</string>
    <string name="settings">Settings</string>
    <string name="sync">Synchronize</string>
    <string name="import_apkg">Import .apkg</string>
    <string name="add_note">Add Note</string>
    <string name="create_deck">Create Deck</string>
    <string name="deck_name">Deck Name</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="card_added">Note added</string>
    <string name="no_decks">No decks found.\n\nTap Sync to download your collection from AnkiWeb, or tap + to create cards.</string>
    <string name="show_answer">SHOW ANSWER</string>
    <string name="space_hint">[Space]</string>
    <string name="again">Again</string>
    <string name="hard">Hard</string>
    <string name="good">Good</string>
    <string name="easy">Easy</string>
    <string name="done">Congratulations! You have finished this deck for now.</string>
    <string name="sync_url_label">Custom Sync Server URL</string>
    <string name="sync_url_hint">https://sync.ankiweb.net</string>
    <string name="save">Save</string>
    <string name="syncing">Synchronizing with AnkiWeb...</string>
    <string name="sync_success">Sync complete</string>
    <string name="sync_failed">Sync error: %s</string>
    <string name="login_failed">Login failed. Please check your email and password.</string>
    <string name="logout">Log Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading...</string>
    <string name="import_success">Deck imported successfully</string>
    <string name="import_failed">Import failed: %s</string>
</resources>